* Make these HttpClient methods public: SetFormVariable, ClearFormVariable, SubmitForm
* FAQ: No change to "get" without postback (eg, tracker #1106130)
* Look into HtmlAgilityPack HTML parser: http://blogs.msdn.com/smourier/archive/2003/06/04/8265.aspx
* FAQ: <csc> error: lib/nant/nant.exe.config <platform name="win32" default="net-1.1">  (Cory Foy, "Build problems," 4/11-4/13/05)
* HTML controls: HtmlTextArea, HtmlSelect, HtmlTable, HtmlInputFile
* Instantiate HTML controls by XPath in addition to ID


Before release:
* Update build: remove NUnit, put NUnitAdapter.cs in bin/ dir
* Copy new constructors to WebFormTester and HtmlAnchorTester/HtmlInputCheckBoxTester
* Finish migration guide.
* Remove ControlTester.EnterInputValue/RemoveInputValue?  Make AssertEnabled explicit in tester?
* Mark 'runAtServer' HTML constructor as obsolete
* Combine HtmlTag and HtmlControlTester
* Make "xxxTag" properties on AspTesters public--map them to HtmlTag
* Add support for auto-postback to RadioButtonTester
* Remove 'Tag' property from AspControlTester; add HtmlTag
* Refer to David Gardiner's code-generation tool in documentation: https://sourceforge.net/projects/nunitaspcodegen/
* Incorporate "Advanced NUnitAsp" video into documentation page


Changes in CVS:
Produced by Jim Shore.
* Added FAQ: How to test sites that require authentication.  Credit to Jim Shore.
* Removed NUnit requirement.  NUnitAsp now works with any test framework.  Credit to Jim Shore.
* Augmented Browser property with HttpClient.Default static property.  Credit to Jim Shore.
* Augmented CurrentWebForm property with single-parameter constructor for testers.  Credit to Jim Shore.
* Created NUnitAdapter.cs file that provides backwards compatibility and quick-start for NUnit users.  Credit Jim Shore.
* Created new migration guide for v1.6.  Removed old NUnit 2.0 migration guide.  Credit to Jim Shore.
* Renamed WebForm to WebFormTester.  Credit to Jim Shore.